[package]
name = "rust_symbolic_executioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
zst = "0.1.2"
smtlib = { version = "0.1.6", features = ["z3"] }
equation-solver = "0.1.1"
unicode-xid = "0.2.4"
rsmt2 = "0.16.2"
paste = "1.0.14"
